python/tests/gold/logservicetest/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "logservicetest.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "k8s-logservicetest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-logservicetest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest",
                "service": "logservicetest-admin"
            },
            "name": "logservicetest-admin",
            "namespace": "default",
            "rkey": "k8s-logservicetest-admin-default",
            "serialization": "ambassador_id: logservicetest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: logservicetest\n  scope: AmbassadorTest\n  service: logservicetest-admin\nname: logservicetest-admin\nnamespace: default\n"
        },
        "k8s-logservicetest-default": {
            "_referenced_by": {},
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-logservicetest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "logservicetest",
            "namespace": "default",
            "rkey": "k8s-logservicetest-default",
            "serialization": "ambassador_id: logservicetest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: logservicetest\n  scope: AmbassadorTest\nname: logservicetest\nnamespace: default\n"
        },
        "k8s-logservicetest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-logservicetest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "logservicetest-http",
            "namespace": "default",
            "rkey": "k8s-logservicetest-http-default",
            "serialization": "ambassador_id: logservicetest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: logservicetest\n  scope: AmbassadorTest\nname: logservicetest-http\nnamespace: default\n"
        },
        "k8s-stenography-default": {
            "_referenced_by": {},
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-stenography-default",
            "metadata_labels": {
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "stenography",
            "namespace": "default",
            "rkey": "k8s-stenography-default",
            "serialization": "ambassador_id: logservicetest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: logservicetest\n  scope: AmbassadorTest\nname: stenography\nnamespace: default\n"
        },
        "logservicetest.default.1": {
            "_referenced_by": {},
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v1",
            "driver": "http",
            "driver_config": {
                "additional_log_headers": [
                    {
                        "header_name": "included-on-all"
                    },
                    {
                        "during_trailer": false,
                        "header_name": "not-included-on-trailer"
                    },
                    {
                        "during_response": false,
                        "during_trailer": false,
                        "header_name": "not-included on resp-trail"
                    },
                    {
                        "during_request": false,
                        "during_response": false,
                        "during_trailer": false,
                        "header_name": "not-anywhere"
                    }
                ]
            },
            "flush_interval_byte_size": 1,
            "flush_interval_time": 1,
            "kind": "LogService",
            "location": "logservicetest.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "custom-http-logging",
            "namespace": "default",
            "rkey": "logservicetest.default.1",
            "serialization": "ambassador_id: logservicetest\napiVersion: ambassador/v1\ndriver: http\ndriver_config:\n  additional_log_headers:\n  - header_name: included-on-all\n  - during_trailer: false\n    header_name: not-included-on-trailer\n  - during_response: false\n    during_trailer: false\n    header_name: not-included on resp-trail\n  - during_request: false\n    during_response: false\n    during_trailer: false\n    header_name: not-anywhere\nflush_interval_byte_size: 1\nflush_inte [...]
            "service": "stenography:25565"
        },
        "logservicetest.default.2": {
            "_referenced_by": {},
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "logservicetest.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "config__dump",
            "namespace": "default",
            "prefix": "/config_dump",
            "rewrite": "/config_dump",
            "rkey": "logservicetest.default.2",
            "serialization": "ambassador_id: logservicetest\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: logservicetest\n  scope: AmbassadorTest\nname: config__dump\nprefix: /config_dump\nrewrite: /config_dump\nservice: http://127.0.0.1:8001\n",
            "service": "http://127.0.0.1:8001"
        }
    },
    "log_services": {
        "custom-http-logging": {
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v1",
            "driver": "http",
            "driver_config": {
                "additional_log_headers": [
                    {
                        "header_name": "included-on-all"
                    },
                    {
                        "during_trailer": false,
                        "header_name": "not-included-on-trailer"
                    },
                    {
                        "during_response": false,
                        "during_trailer": false,
                        "header_name": "not-included on resp-trail"
                    },
                    {
                        "during_request": false,
                        "during_response": false,
                        "during_trailer": false,
                        "header_name": "not-anywhere"
                    }
                ]
            },
            "flush_interval_byte_size": 1,
            "flush_interval_time": 1,
            "kind": "LogService",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "custom-http-logging",
            "namespace": "default",
            "service": "stenography:25565"
        }
    },
    "mappings": {
        "config__dump": {
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "config__dump",
            "namespace": "default",
            "prefix": "/config_dump",
            "rewrite": "/config_dump",
            "service": "http://127.0.0.1:8001"
        }
    },
    "service": {
        "k8s-logservicetest-admin-default": {
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest",
                "service": "logservicetest-admin"
            },
            "name": "logservicetest-admin",
            "namespace": "default"
        },
        "k8s-logservicetest-default": {
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "logservicetest",
            "namespace": "default"
        },
        "k8s-logservicetest-http-default": {
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "logservicetest-http",
            "namespace": "default"
        },
        "k8s-stenography-default": {
            "ambassador_id": "logservicetest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "logservicetest",
                "scope": "AmbassadorTest"
            },
            "name": "stenography",
            "namespace": "default"
        }
    }
}
