python/tests/gold/logservicetest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"logservicetest\",\"scope\":\"AmbassadorTest\",\"service\":\"logservicetest-admin\"},\"name\":\"logservicetest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"logservicetest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"logservicetest\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-10T16:54:32Z",
                    "labels": {
                        "kat-ambassador-id": "logservicetest",
                        "scope": "AmbassadorTest",
                        "service": "logservicetest-admin"
                    },
                    "name": "logservicetest-admin",
                    "namespace": "default",
                    "resourceVersion": "59801",
                    "selfLink": "/api/v1/namespaces/default/services/logservicetest-admin",
                    "uid": "dfc1424f-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.99.24.183",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "logservicetest-admin",
                            "nodePort": 32340,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "logservicetest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"logservicetest\",\"scope\":\"AmbassadorTest\"},\"name\":\"logservicetest-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8108},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8471}],\"selector\":{\"backend\":\"super [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:33Z",
                    "labels": {
                        "kat-ambassador-id": "logservicetest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "logservicetest-http",
                    "namespace": "default",
                    "resourceVersion": "59823",
                    "selfLink": "/api/v1/namespaces/default/services/logservicetest-http",
                    "uid": "e0647606-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.110.228.112",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8108
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8471
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"logservicetest\",\"scope\":\"AmbassadorTest\"},\"name\":\"stenography\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":25565,\"targetPort\":\"http\"}],\"selector\":{\"app\":\"stenography\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-10T16:54:32Z",
                    "labels": {
                        "kat-ambassador-id": "logservicetest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "stenography",
                    "namespace": "default",
                    "resourceVersion": "59810",
                    "selfLink": "/api/v1/namespaces/default/services/stenography",
                    "uid": "e011c117-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.105.251.238",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31952,
                            "port": 25565,
                            "protocol": "TCP",
                            "targetPort": "http"
                        }
                    ],
                    "selector": {
                        "app": "stenography"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: LogService\nname: custom-http-logging\nservice: stenography:25565\ndriver: http\ndriver_config:\n  additional_log_headers:\n  - header_name: \"included-on-all\"\n  - header_name: \"not-included-on-trailer\"\n    during_trailer: false\n  - header_name: \"not-included on resp-trail\"\n    during_trailer: false\n    during_response: false\n  - header_name: \"not-anywhere\"\n    during_trailer: false\n    durin [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: LogService\\nname: custom-http-logging\\nservice: stenography:25565\\ndriver: http\\ndriver_config:\\n  additional_log_headers:\\n  - header_name: \\\"included-on-all\\\"\\n  - header_name: \\\"not-included-on-trailer\\\"\\n    during_trailer: false\\n  - header_name: \\\"not-i [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:32Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "logservicetest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "logservicetest",
                    "namespace": "default",
                    "resourceVersion": "59797",
                    "selfLink": "/api/v1/namespaces/default/services/logservicetest",
                    "uid": "df9f181b-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.96.149.96",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 32395,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30211,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        },
                        {
                            "name": "extra-25565",
                            "nodePort": 31298,
                            "port": 25565,
                            "protocol": "TCP",
                            "targetPort": 25565
                        }
                    ],
                    "selector": {
                        "service": "logservicetest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
